--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,98 +1,85 @@
-@import "mocha.css"; 
+/*@import "mocha.css"; */
+@import "gruvbox.css";
 
 * {
-  font-family: "JetBrainsMonoNerdFont";
-  font-size: 18px;
-  min-height: 0;
-  }
+    font-family: "JetBrainsMonoNerdFont";
+    font-size: 18px;
+    min-height: 0;
+}
 
 #waybar {
-  background: transparent;
-  color: @text;
-  margin: 5px 5px;
+    background:transparent;
+    color: @fg;
+    margin: 2px;
+    opacity: 1;
 }
 
 #workspaces {
-  margin: 5px;
-  background-color: @surface0;
-  margin-left: 1rem;
+    margin: 4px;
+    background-color: @bg;
+    margin-left: 1rem;
+    border:4px solid @yellow;
+    border-radius:10px;
 }
 
 #workspaces button {
-  color: @lavender;
-  padding: 0.2rem;
+    color: @fg;
+    padding: 0.4rem;
 }
 
 #workspaces button.active {
-  color: @sky;
-  background-color: @overlay0;
+    color: @yellow;
+    background-color: @overlay0;
 }
 
 #workspaces button:hover {
-  color: @sapphire;
+    color: @red;
 }
 
-#custom-music,
 #tray,
 #backlight,
 #clock,
 #battery,
 #pulseaudio,
-#custom-lock,
-#power-profiles-deamon,
-#custom-power {
-  background-color: @surface0;
-  padding: 0.4rem;
-  margin: 4px;
+#power-profiles-daemon{
+    background-color: @bg;
+    padding: 0.5rem;
+    margin: 6px;
+    color: @fg;
+    border:4px solid @yellow;
+    border-radius:10px;
 }
 
 #clock {
-  color: @blue;
-  margin-right: 1rem;
+    color: @fg;
+    margin-right: 1rem;
 }
 
 #battery {
-  color: @green;
-  padding-right:1rem;
+    color: @green;
+    padding-right: 1rem;
 }
 
 #battery.charging {
-  color: @green;
+    color: @green;
 }
 
 #battery.warning:not(.charging) {
-  color: @red;
+    color: @red;
 }
 
 #backlight {
-  color: @yellow;
+    color: @fg;
 }
 
 #backlight,
 #battery {
-  border-radius: 0;
+    border-radius: 0;
 }
 
 #pulseaudio {
-  color: @maroon;
+    color: @purple;
 }
-
-#custom-music {
-  color: @mauve;
-  border-radius: 1rem;
-}
-
-#custom-lock {
-  border-radius: 1rem 0px 0px 1rem;
-  color: @lavender;
-}
-
-#custom-power {
-  margin-right: 1rem;
-  border-radius: 0px 1rem 1rem 0px;
-  color: @red;
-}
-
 #tray {
-  margin-right: 1rem;
+    margin-right: 1rem;
 }
