--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,85 +1,30 @@
-/*@import "mocha.css"; */
 @import "gruvbox.css";
 
 * {
     font-family: "JetBrainsMonoNerdFont";
-    font-size: 18px;
+    font-size: 16px;
     min-height: 0;
+    color: @fg;
 }
 
 #waybar {
-    background:transparent;
+    background: @bg;
+    border: 1px solid @orange;
+    border-radius: 5px;
     color: @fg;
-    margin: 2px;
-    opacity: 1;
+}
+
+#tray {
+    margin-left: 8px;
+    margin-right: 8px;
 }
 
 #workspaces {
     margin: 4px;
-    background-color: @bg;
-    margin-left: 1rem;
-    border:4px solid @yellow;
-    border-radius:10px;
 }
-
-#workspaces button {
-    color: @fg;
-    padding: 0.4rem;
-}
-
 #workspaces button.active {
-    color: @yellow;
-    background-color: @overlay0;
+    background-color: @yellow;
 }
-
-#workspaces button:hover {
-    color: @red;
-}
-
-#tray,
-#backlight,
-#clock,
-#battery,
-#pulseaudio,
-#power-profiles-daemon{
-    background-color: @bg;
-    padding: 0.5rem;
-    margin: 6px;
-    color: @fg;
-    border:4px solid @yellow;
-    border-radius:10px;
-}
-
-#clock {
-    color: @fg;
-    margin-right: 1rem;
-}
-
-#battery {
-    color: @green;
-    padding-right: 1rem;
-}
-
-#battery.charging {
-    color: @green;
-}
-
-#battery.warning:not(.charging) {
-    color: @red;
-}
-
-#backlight {
-    color: @fg;
-}
-
-#backlight,
-#battery {
-    border-radius: 0;
-}
-
-#pulseaudio {
-    color: @purple;
-}
-#tray {
-    margin-right: 1rem;
+#workspaces button:hover{
+    background-color: @gray;
 }
